--- a/cov.ipynb
+++ b/cov.ipynb
@@ -15,7 +15,68 @@
     "# Load test samples\n",
     "samples_g_1, samples_c_1, samples_w_1 = pickle_in(\"test_samples/samples_1.pickle\")\n",
     "samples_g_2, samples_c_2, samples_w_2 = pickle_in(\"test_samples/samples_low_var.pickle\")\n",
-    "samples_g_3, samples_c_3, samples_w_3 = pickle_in(\"test_samples/samples_high_dim.pickle\")"
+    "samples_g_3, samples_c_3, samples_w_3 = pickle_in(\"test_samples/samples_high_dim.pickle\")\n",
+    "\n",
+    "from covariance import logPr, logX_cov, logX_mean, logX_model"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`covariance.py` contains the necessary functions for this approach  \n",
+    "`logX_mean(samples, iteration)`\n",
+    "returns vector $\\bm{\\mu}$ at iteration $k$\\, where $\\bm{\\mu}$ is the expected value of $X$ at the $n_{live}$ iterations\n",
+    "$$\\bm{\\mu}=(E[\\log X_\\text{live}^{(1)}],  \\cdots, E[\\log X_\\text{live}^{(n_{\\text{live}})}])$$\n",
+    "`logX_cov(samples, iteration)` likewise returns the covariance matrix between the areas of the $n_\\text{live}$ points;\n",
+    "$$\\bm{\\Sigma}(\\log X_i, \\log X_j)$$\n",
+    "\n",
+    "**TODO** Really want $\\Sigma^{-1}$, implent this using Cholesky\n",
+    "\n",
+    "`logPr(logX, mean, cov_inv)` returns probability of getting $\\log X$, given their expected values and covariance - this is what we want to optimise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numba as nb\n",
+    "@nb.jit(nopython=True)\n",
+    "def choleskyL_inv(nlive_list):\n",
+    "    \"\"\"\n",
+    "    Input: list of birth nlive associated with the live points at an iteration\n",
+    "    Output: inverse of covariance matrix between the areas of the nlive points\n",
+    "    \"\"\"\n",
+    "    nlive = len(nlive_list)\n",
+    "    L_ij_inv = np.zeros((nlive, nlive))\n",
+    "    for i in range(nlive):\n",
+    "        for j in range(nlive):\n",
+    "            if i == j:\n",
+    "                L_ij_inv[i][j] = nlive_list[j]\n",
+    "            elif i == j + 1:\n",
+    "                L_ij_inv[i][j] = -nlive_list[j+1]\n",
+    "    return L_ij_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "951 µs ± 55.7 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "nlive_list = np.arange(100)\n",
+    "%timeit cholesky_inv(nlive_list)"
    ]
   },
   {
@@ -24,35 +85,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def logX_mean(samples, iteration):\n",
-    "    \"\"\"Function that returns the mean vector for a given iteration of samples\"\"\"\n",
-    "    indices = samples.live_points(iteration).index\n",
-    "    logX_mean = samples.logX()[indices]\n",
-    "    return np.array(logX_mean)\n",
-    "\n",
-    "def logX_cov(samples, iteration):\n",
-    "    \"\"\"Function that returns the covariance matrix for a given iteration of samples\"\"\"\n",
-    "    nk = int(samples.iloc[iteration].nlive)\n",
-    "    nlive = int(samples.iloc[0].nlive)\n",
-    "    iterations = samples.live_points(iteration).index\n",
-    "    vars = np.zeros(nk)\n",
-    "    for i, iteration in enumerate(iterations):\n",
-    "        vars[i] = (iteration+1)/(nlive**2)\n",
-    "    cov = np.zeros((nk, nk))\n",
-    "    for i in range(nk):\n",
-    "        for j in range(i, nk):\n",
-    "            cov[i][j] = cov[j][i] = vars[i]\n",
-    "    return cov\n",
-    "\n",
-    "def logX_model(logL, logLmax, d, sigma):\n",
-    "     \"\"\"Returns logX as a function of logL, logLmax, d, sigma\"\"\"\n",
-    "     logLmax_array = logLmax * np.ones(len(logL))\n",
-    "     return d/2 * np.log(2*sigma**2 *(logLmax_array - logL))\n",
-    "\n",
-    "def logPr(logX, mean, cov_inv):\n",
-    "    \"\"\"Log of probability density for a set of logX samples, given its mean and covariance\"\"\"\n",
-    "    return - (logX - mean).T @ cov_inv @ (logX - mean)\n",
-    "    \n",
     "from scipy.optimize import minimize\n",
     "def optimise_pr(logL, mean, cov_inv, x0):\n",
     "    def func(theta):\n",
@@ -230,34 +262,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numba as nb\n",
-    "@nb.jit(nopython=True)\n",
-    "def brute_force_min(logLmaxs, ds, sigmas):\n",
-    "    logLmax_best = None\n",
-    "    d_best = None\n",
-    "    sigma_best = None\n",
-    "    logPr_max = -np.inf\n",
-    "    for i in range(len(logLmaxs)):\n",
-    "        logLmax = logLmaxs[i]\n",
-    "        for j in range(len(ds)):\n",
-    "            d = ds[j]\n",
-    "            for k in range(len(sigmas)):\n",
-    "                sigma = sigmas[k]\n",
-    "                logX = d/2 * np.log(2*sigma**2 *(logLmax - logL))\n",
-    "                logPr_i = - (logX - mean).T @ cov_inv @ (logX - mean)\n",
-    "                if logPr_i > logPr_max:\n",
-    "                    logPr_max = logPr_i\n",
-    "                    logLmax_best, d_best, sigma_best = logLmax, d, sigma\n",
-    "        print(logLmax)\n",
-    "    return [logLmax_best, d_best, sigma_best]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -266,7 +270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('venv')",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +289,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "eb7500b99f9889fd47e429a91c11aac9b8a2eca95599048c69b6a63dc3056bf2"
+    "hash": "2b193e973c487348e53c3041550f70cb697f4f9d1473e92be26f2b6259e7d483"
    }
   }
  },
