--- a/tests.ipynb
+++ b/tests.ipynb
@@ -12,9 +12,9 @@
     "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
     "\n",
     "from toy_samples import gaussian_samples, wedding_cake_samples, correlated_gaussian_samples\n",
-    "from lm import log_uniform_guesses, global_live_lm, local_live_lm, estimate_iterations, live_data\n",
-    "from lm import levenberg_marquardt, logL_model\n",
-    "from plots import plot_statistics_sample"
+    "from full_lm import log_uniform_guesses, global_live_lm, local_live_lm, estimate_iterations, live_data\n",
+    "from full_lm import levenberg_marquardt, logL_model\n",
+    "from estimate_plots import plot_statistics_sample"
    ]
   },
   {
