--- a/lm.ipynb
+++ b/lm.ipynb
@@ -1014,9 +1014,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1030,7 +1030,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
@@ -1038,5 +1037,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
