--- a/tests.ipynb
+++ b/tests.ipynb
@@ -12,9 +12,9 @@
     "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
     "\n",
     "from toy_samples import gaussian_samples, wedding_cake_samples, correlated_gaussian_samples\n",
-    "from full_lm import log_uniform_guesses, global_live_lm, local_live_lm, estimate_iterations, live_data\n",
-    "from full_lm import levenberg_marquardt, logL_model\n",
-    "from estimate_plots import plot_statistics_sample"
+    "from lm_full import log_uniform_guesses, global_live_lm, local_live_lm, estimate_iterations, live_data\n",
+    "from lm_full import levenberg_marquardt, logL_model\n",
+    "from plotting import plot_statistics_sample"
    ]
   },
   {
@@ -312,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('venv')",
+   "display_name": "Python 3.10.6 ('env')",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +331,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "eb7500b99f9889fd47e429a91c11aac9b8a2eca95599048c69b6a63dc3056bf2"
+    "hash": "2b193e973c487348e53c3041550f70cb697f4f9d1473e92be26f2b6259e7d483"
    }
   }
  },
