--- a/notebooks/least_squares/figures.ipynb
+++ b/notebooks/least_squares/figures.ipynb
@@ -69,7 +69,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('venv')",
+   "display_name": "Python 3.10.6 ('env')",
    "language": "python",
    "name": "python3"
   },
@@ -88,7 +88,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "eb7500b99f9889fd47e429a91c11aac9b8a2eca95599048c69b6a63dc3056bf2"
+    "hash": "f04b3df41c937fb946d36e0c914ccce305e67d8dbbe371762424715e8a219369"
    }
   }
  },
