--- a/notebooks/least_squares/lm.ipynb
+++ b/notebooks/least_squares/lm.ipynb
@@ -1014,7 +1014,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 ('env')",
    "language": "python",
    "name": "python3"
   },
@@ -1032,7 +1032,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "2b193e973c487348e53c3041550f70cb697f4f9d1473e92be26f2b6259e7d483"
    }
   }
  },
