--- a/notebooks/week_1/deep_predictions.ipynb
+++ b/notebooks/week_1/deep_predictions.ipynb
@@ -684,7 +684,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3.10.6 ('env')",
    "language": "python",
    "name": "python3"
   },
@@ -703,7 +703,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2b193e973c487348e53c3041550f70cb697f4f9d1473e92be26f2b6259e7d483"
+    "hash": "f04b3df41c937fb946d36e0c914ccce305e67d8dbbe371762424715e8a219369"
    }
   }
  },
