added analytic X statistics and predictions

--- a/notebooks/week_1/deep_predictions.ipynb
+++ b/notebooks/week_1/deep_predictions.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from covariance import logPr, logX_model, logX_mean, cov_inv_at_iteration\n",
+    "from aeons.covariance import logPr, logX_model, logX_mean, cov_inv_at_iteration\n",
     "\n",
     "\n",
     "def live_cg(samples, iteration):\n",
@@ -26,7 +26,7 @@
     "\n",
     "def logPr_params(samples, iteration, params):\n",
     "    logLmax, d, sigma = params\n",
-    "    from covariance import logPr, logX_model\n",
+    "    from aeons.covariance import logPr, logX_model\n",
     "    logL, mean, cov_inv = live_cg(samples, iteration)\n",
     "    logX = logX_model(logL, logLmax, d, sigma)\n",
     "    logPr_params = logPr(logX, mean, cov_inv)\n",
