showing Gaussian does well for simple functions

--- a/notebooks/week_4/toy_ns.ipynb
+++ b/notebooks/week_4/toy_ns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,12 @@
     "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "from scipy.optimize import minimize\n",
     "\n",
-    "from toy_samples import gaussian_samples\n",
-    "from covariance import logX_mu, logX_covinv_chol, points_at_iteration, logPr\n",
+    "from aeons.toy_samples import gaussian_samples\n",
+    "from aeons.covariance import logX_mu, logX_covinv_chol, points_at_iteration, logPr\n",
     "\n",
     "# Load test samples\n",
-    "from tools import pickle_in\n",
-    "samples_g_1, samples_c_1, samples_w_1 = pickle_in(\"test_samples/samples_1.pickle\")"
+    "from aeons.tools import pickle_in\n",
+    "samples_g_1, samples_c_1, samples_w_1 = pickle_in(\"../test_samples/samples_1.pickle\")"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from covariance import optimise_pr_cg, logX_model\n",
+    "from aeons.covariance import optimise_pr_cg, logX_model\n",
     "params_cg = optimise_pr_cg(logL, mean, covinv, [-0.1, 5, 0.1]).x\n",
     "logX_predict_cg = logX_model(logL, *params_cg)"
    ]
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lm_partial import analytic_lm_params\n",
+    "from aeons.lm_partial import analytic_lm_params\n",
     "params_ls = analytic_lm_params(logL, np.exp(mean), 10)\n",
     "logX_predict_ls = logX_model(logL, *params_ls)"
    ]
@@ -258,50 +258,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 790,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  5.        ,   5.95959596,   6.91919192,   7.87878788,\n",
-       "         8.83838384,   9.7979798 ,  10.75757576,  11.71717172,\n",
-       "        12.67676768,  13.63636364,  14.5959596 ,  15.55555556,\n",
-       "        16.51515152,  17.47474747,  18.43434343,  19.39393939,\n",
-       "        20.35353535,  21.31313131,  22.27272727,  23.23232323,\n",
-       "        24.19191919,  25.15151515,  26.11111111,  27.07070707,\n",
-       "        28.03030303,  28.98989899,  29.94949495,  30.90909091,\n",
-       "        31.86868687,  32.82828283,  33.78787879,  34.74747475,\n",
-       "        35.70707071,  36.66666667,  37.62626263,  38.58585859,\n",
-       "        39.54545455,  40.50505051,  41.46464646,  42.42424242,\n",
-       "        43.38383838,  44.34343434,  45.3030303 ,  46.26262626,\n",
-       "        47.22222222,  48.18181818,  49.14141414,  50.1010101 ,\n",
-       "        51.06060606,  52.02020202,  52.97979798,  53.93939394,\n",
-       "        54.8989899 ,  55.85858586,  56.81818182,  57.77777778,\n",
-       "        58.73737374,  59.6969697 ,  60.65656566,  61.61616162,\n",
-       "        62.57575758,  63.53535354,  64.49494949,  65.45454545,\n",
-       "        66.41414141,  67.37373737,  68.33333333,  69.29292929,\n",
-       "        70.25252525,  71.21212121,  72.17171717,  73.13131313,\n",
-       "        74.09090909,  75.05050505,  76.01010101,  76.96969697,\n",
-       "        77.92929293,  78.88888889,  79.84848485,  80.80808081,\n",
-       "        81.76767677,  82.72727273,  83.68686869,  84.64646465,\n",
-       "        85.60606061,  86.56565657,  87.52525253,  88.48484848,\n",
-       "        89.44444444,  90.4040404 ,  91.36363636,  92.32323232,\n",
-       "        93.28282828,  94.24242424,  95.2020202 ,  96.16161616,\n",
-       "        97.12121212,  98.08080808,  99.04040404, 100.        ])"
-      ]
-     },
-     "execution_count": 790,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mean"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 788,
    "metadata": {},
    "outputs": [],
@@ -380,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,17 +353,17 @@
     "    solution = minimize(func, theta0)\n",
     "    return solution\n",
     "\n",
-    "def optimise_pr_cg(logL, mean, cov_inv, x0):\n",
-    "    def func(theta):\n",
-    "        logX = logX_func(logL, theta)\n",
-    "        return - logPr(logX, mean, cov_inv) # want to maximise probability <-> minimise negative\n",
-    "    solution = minimize(func, x0)\n",
-    "    return solution"
+    "# def optimise_pr_cg(logL, mean, cov_inv, x0):\n",
+    "#     def func(theta):\n",
+    "#         logX = logX_func(logL, theta)\n",
+    "#         return - logPr(logX, mean, cov_inv) # want to maximise probability <-> minimise negative\n",
+    "#     solution = minimize(func, x0)\n",
+    "#     return solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,24 +515,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[22.27895417] [9.64171903]\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
      ]
     }
    ],
    "source": [
     "# Taking logX is the problem\n",
     "def y_func(X, theta):\n",
-    "    return theta * np.log(X)\n",
+    "    return theta * X**2\n",
     "\n",
     "def y_inverse(Y, theta):\n",
-    "    return np.exp(Y / theta)\n",
+    "    return (Y / theta)**(1/2)\n",
     "\n",
     "def minimise_theta(Y, mean, cov_inv, theta0):\n",
     "    def func(theta):\n",
@@ -585,19 +550,7 @@
     "    solution = minimize(func, theta0)\n",
     "    return solution\n",
     "\n",
-    "iteration = 1000\n",
-    "nk = 10000 * np.ones(iteration)\n",
-    "logX_mean = logX_mu(nk)\n",
-    "logX_covinv = logX_covinv_chol(nk)\n",
-    "logX_cov = np.linalg.inv(logX_covinv)\n",
-    "X_mean = np.exp(logX_mean)\n",
-    "\n",
-    "X_actual = np.random.multivariate_normal(X_mean, logX_cov)\n",
-    "Y_X = y_func(X_actual, 10)\n",
-    "\n",
-    "c = minimise_theta(Y_X, X_mean, logX_covinv, 10).x\n",
-    "l = minimise_theta(Y_X, X_mean, np.eye(len(logX_mean)), 10).x\n",
-    "print(c, l)"
+    " "
    ]
   },
   {
@@ -631,14 +584,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10.00033578] [9.988771]\n"
+      "[10.00131831] [10.00044128]\n"
      ]
     }
    ],
