added notebook for errorbar analysis

--- a/notebooks/week_5/3_full_likelihood.ipynb
+++ b/notebooks/week_5/3_full_likelihood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,9 @@
     "\n",
     "from aeons.covariance import logX_mu, logX_covinv_chol, points_at_iteration, X_mu, X_Sigmainv, data_at_iteration\n",
     "from aeons.true_distribution import generate_Xs\n",
-    "from aeons.lm_partial import analytic_lm_params"
+    "from aeons.lm_partial import analytic_lm_params\n",
+    "from bayes import logPr_bayes, logPr_gaussian, minimise_ls, minimise_bayes, minimise_gaussian\n",
+    "from likelihoods import likelihood"
    ]
   },
   {
@@ -31,54 +33,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def full_logL_X(X, theta):\n",
-    "    logLmax, d, sigma = theta\n",
-    "    return logLmax - X**(2/d)/(2*sigma**2)\n",
+    "def full_like():\n",
+    "    def func(X, theta):\n",
+    "        logLmax, d, sigma = theta\n",
+    "        return logLmax - X**(2/d)/(2*sigma**2)\n",
     "\n",
-    "def full_X_logL(logL, theta):\n",
-    "    logLmax, d, sigma = theta\n",
-    "    return (2*sigma**2 * (logLmax - logL))**(d/2)\n",
+    "    def inverse(logL, theta):\n",
+    "        logLmax, d, sigma = theta\n",
+    "        return (2*sigma**2 * (logLmax - logL))**(d/2)\n",
     "\n",
-    "def full_logL_prime(X, theta):\n",
-    "    logLmax, d, sigma = theta\n",
-    "    return - 1/(d*sigma**2) * X**(2/d - 1)\n",
+    "    def prime(X, theta):\n",
+    "        logLmax, d, sigma = theta\n",
+    "        return - 1/(d*sigma**2) * X**(2/d - 1)\n",
     "\n",
-    "def logPr_full(logL, mean, covinv, theta):\n",
-    "    Xstar = full_X_logL(logL, theta)\n",
-    "    return - 1/2 * (Xstar - mean).T @ covinv @ (Xstar - mean) \n",
+    "    return likelihood(func, inverse, prime)\n",
     "\n",
-    "def logPr_bayes_full(logL, mean, covinv, theta):\n",
-    "    Xstar = full_X_logL(logL, theta)\n",
-    "    log_abs_fprimes = np.log(abs(full_logL_prime(Xstar, theta)))\n",
-    "    return - np.sum(log_abs_fprimes) - 1/2 * (Xstar - mean).T @ covinv @ (Xstar - mean)\n",
-    "\n",
-    "def minimise_bayes_full(logL, mean, covinv, x0):\n",
-    "    def func(theta):\n",
-    "        return - logPr_bayes_full(logL, mean, covinv, theta)\n",
-    "    solution = minimize(func, x0, bounds=((logL.max(), np.inf), (0, np.inf), (0, np.inf)))\n",
-    "    return solution\n",
-    "\n",
-    "def minimise_gaussian_full(logL, mean, covinv, x0):\n",
-    "    def func(theta):\n",
-    "        return - logPr_full(logL, mean, covinv, theta)\n",
-    "    solution = minimize(func, x0)\n",
-    "    return solution"
+    "full = full_like()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check if the loss function diagnostic meets the eye test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nk, logL = data_at_iteration(samples_g_1, 8000)\n",
+    "def loss_theta(theta_true, theta_predicted):\n",
+    "    frac_diffs = (theta_true - theta_predicted)/theta_true\n",
+    "    return np.sum(frac_diffs**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nk, logL = data_at_iteration(samples_g_1, 100)\n",
     "mean_X = X_mu(nk)\n",
     "covinv_X = X_Sigmainv(nk)\n",
     "covinv_ls = np.eye(len(mean_X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b 22\n",
+      "l 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = 0\n",
+    "l = 0\n",
+    "theta_true = np.array([1, 10, 0.1])\n",
+    "for i in range(50):\n",
+    "    Xs = generate_Xs(nk)\n",
+    "    y = full.func(Xs, theta_true)\n",
+    "    theta_b =  minimise_bayes(y, full, mean_X, covinv_X, theta_true).x\n",
+    "    theta_l = minimise_ls(y, full, mean_X, theta_true).x\n",
+    "    if loss_theta(theta_true, theta_b) < loss_theta(theta_true, theta_l):\n",
+    "        b += 1\n",
+    "    else:\n",
+    "        l += 1\n",
+    "print('b', b)\n",
+    "print('l', l)"
    ]
   },
   {
