added methods to compare accuracy of estimation methods

--- a/notebooks/week_5/2_simple_likelihoods.ipynb
+++ b/notebooks/week_5/2_simple_likelihoods.ipynb
@@ -17,13 +17,13 @@
     "from aeons.tools import pickle_in\n",
     "samples_g_1, samples_c_1, samples_w_1 = pickle_in(\"../test_samples/samples_1.pickle\")\n",
     "\n",
-    "from aeons.covariance import logX_mu, logX_covinv_chol, points_at_iteration, X_mu, X_Sigmainv, data_at_iteration\n",
+    "from aeons.covariance import logX_mu, logX_covinv_chol, points_at_iteration, X_mu, X_Sigma, X_Sigmainv, data_at_iteration\n",
     "from aeons.true_distribution import generate_Xs\n",
     "from aeons.lm_partial import analytic_lm_params\n",
     "from bayes import logPr_bayes, logPr_gaussian, minimise_ls, minimise_bayes, minimise_gaussian\n",
-    "\n",
-    "from likelihoods import simple_like, middle_like\n",
-    "simple, middle = simple_like(), middle_like()"
+    "from likelihoods import linear_like, quad_like, log_like, simple_like, middle_like, full_like\n",
+    "linear, quad, log = linear_like(), quad_like(), log_like()\n",
+    "simple, middle, full = simple_like(), middle_like(), full_like()"
    ]
   },
   {
