calculation of analytic hessian for laplace approximation

--- a/notebooks/week_5/2_simple_likelihoods.ipynb
+++ b/notebooks/week_5/2_simple_likelihoods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,6 +339,76 @@
     "        l += 1\n",
     "print('b', b)\n",
     "print('l', l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def L2_theta(theta_true, theta_predicted):\n",
+    "    frac_diffs = (theta_true - theta_predicted)/theta_true\n",
+    "    return np.sum(frac_diffs**2)\n",
+    "\n",
+    "def target_X(theta):\n",
+    "    from scipy.special import gamma\n",
+    "    d, sigma = theta\n",
+    "    return 2**(d/2) * sigma**d * gamma(1 + d/2)\n",
+    "\n",
+    "def Ltarget_theta(theta_true, theta_predicted):\n",
+    "    return abs(target_X(theta_true) - target_X(theta_predicted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: bayes 0, ls 1\n",
+      "5: bayes 2, ls 4\n",
+      "10: bayes 5, ls 6\n",
+      "15: bayes 5, ls 11\n",
+      "20: bayes 10, ls 11\n",
+      "25: bayes 11, ls 15\n",
+      "30: bayes 11, ls 20\n",
+      "35: bayes 12, ls 24\n",
+      "40: bayes 14, ls 27\n",
+      "45: bayes 16, ls 30\n",
+      "50: bayes 18, ls 33\n",
+      "55: bayes 18, ls 38\n",
+      "60: bayes 18, ls 43\n",
+      "65: bayes 20, ls 46\n",
+      "70: bayes 22, ls 49\n",
+      "75: bayes 24, ls 52\n",
+      "80: bayes 25, ls 56\n",
+      "85: bayes 29, ls 57\n",
+      "90: bayes 30, ls 61\n",
+      "95: bayes 31, ls 65\n",
+      "99: bayes 33, ls 67\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = 0\n",
+    "l = 0\n",
+    "theta_true = np.array([10, 0.1])\n",
+    "for i in range(100):\n",
+    "    Xs = generate_Xs(nk)\n",
+    "    y = middle.func(Xs, theta_true)\n",
+    "    theta_b =  minimise_bayes(y, middle, mean_X, covinv_X, theta_true).x\n",
+    "    theta_l = minimise_ls(y, middle, mean_X, theta_true).x\n",
+    "    if Ltarget_theta(theta_true, theta_b) < Ltarget_theta(theta_true, theta_l):\n",
+    "        b += 1\n",
+    "    else:\n",
+    "        l += 1\n",
+    "    if (i % 5) == 0:\n",
+    "        print(f'{i}: bayes {b}, ls {l}')\n",
+    "print(f'{i}: bayes {b}, ls {l}')"
    ]
   },
   {
