added first implementation of hessian

--- a/notebooks/week_5/1_simple_functions.ipynb
+++ b/notebooks/week_5/1_simple_functions.ipynb
@@ -65,7 +65,7 @@
     "logL = samples_c_1.logL\n",
     "logX = samples_c_1.logX()\n",
     "X = np.exp(logX)\n",
-    "plt.plot(X, logL)p"
+    "plt.plot(X, logL)"
    ]
   },
   {
