added to P(X|logL) and evidence comparisons for X vs logX

--- a/notebooks/week_6/torch_hessian.ipynb
+++ b/notebooks/week_6/torch_hessian.ipynb
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-2.56181446e+07  7.32705679e+03 -2.57801676e+07]\n",
-      " [ 7.32705679e+03 -1.11734415e+02  4.58714804e+03]\n",
-      " [-2.57801676e+07  4.58714804e+03 -2.60161700e+07]]\n",
-      "eigvals: [-5.15980944e+07 -3.63286156e+04 -3.21797172e+00]\n"
+      "[[-2.33672243e+07  8.05692040e+03 -2.06816333e+07]\n",
+      " [ 8.05692040e+03 -1.41088512e+02  4.08161991e+03]\n",
+      " [-2.06816333e+07  4.08161991e+03 -1.83749344e+07]]\n",
+      "eigvals: [-4.17028045e+07 -3.94893576e+04 -5.90608241e+00]\n"
      ]
     }
    ],
@@ -64,25 +64,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-2.56181446e+07  7.32705679e+03 -2.57801676e+07]\n",
-      " [ 7.32705679e+03 -1.11734415e+02  2.57941472e+03]\n",
-      " [-2.57801676e+07  2.57941472e+03 -2.59958893e+07]]\n"
+      "[[-2.33672243e+07  8.05692040e+03 -2.06816333e+07]\n",
+      " [ 8.05692040e+03 -1.41088512e+02  4.08161991e+03]\n",
+      " [-2.06816333e+07  4.08161991e+03 -1.83749344e+07]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([-5.15878774e+07, -2.65895573e+04,  3.21364926e+02])"
+       "array([-4.17028045e+07, -3.94893576e+04, -5.90608241e+00])"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,6 +92,23 @@
     "H_analytic = hess(np.array(y), np.array(mean_X), np.array(covinv_X), theta_max)\n",
     "print(f'{H_analytic}')\n",
     "np.linalg.eigvals(H_analytic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28 ms ± 4.19 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit H_autograd = hess_autograd(y, mean_X, covinv_X, theta_max)"
    ]
   },
   {
