added tests on wedding cake likelihood, evidence calculations

--- a/notebooks/week_6/evidence.ipynb
+++ b/notebooks/week_6/evidence.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +130,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zixiao/Documents/III/project/aeons/aeons/likelihoods.py:111: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  return - 1/(d*sigma**2) * X**(2/d - 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "nk, L = data_at_iteration(samples_w_1, 1000)\n",
+    "mean = X_mu(nk)\n",
+    "covinv = X_Sigmainv(nk)\n",
+    "theta = minimise_bayes(L, full, mean, covinv, [1, 10, 0.1]).x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X: [-7.68169009  7.87578942  0.1099947 ]\n",
-      "logX: [-9.35928837  7.61813577  0.11229874]\n",
-      "bayes factor: 3.707261283242028\n"
+      "X: [ 3.76091801 10.51444231  0.09734205]\n",
+      "logX: [ 6.26553063 11.11905693  0.09511069]\n",
+      "bayes factor: 7.106100115430009\n"
      ]
     }
    ],
@@ -161,18 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a69edc90768248d3a5cf97fec8dcadc5",
+       "model_id": "5b5e7754a2f540dba157dcd4e24b8404",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='frame', max=3), Output()), _dom_classes=('widget-interac…"
+       "interactive(children=(RadioButtons(description='frame', options=('full', 1, 2, 3), value='full'), Output()), _…"
       ]
      },
      "metadata": {},
@@ -181,12 +202,12 @@
    ],
    "source": [
     "from ipywidgets import interact, widgets\n",
-    "@interact(frame=widgets.IntSlider(min=0, max=3))\n",
+    "@interact(frame=widgets.RadioButtons(options=['full', 1, 2, 3]))\n",
     "def plot(frame):\n",
     "    plt.plot(Xs, y, 'x', ms=1, color='deepskyblue')\n",
     "    plt.plot(X_X, y, color='black', label='X')\n",
     "    plt.plot(X_logX, y, color='gray', label='logX')\n",
-    "    if frame == 0:\n",
+    "    if frame == 'full':\n",
     "        pass\n",
     "    elif frame == 1:\n",
     "        plt.xlim(0.2, 0.4)\n",
