added least squares evidence calculation

--- a/notebooks/week_6/evidence.ipynb
+++ b/notebooks/week_6/evidence.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,24 +143,24 @@
     }
    ],
    "source": [
-    "nk, L = data_at_iteration(samples_w_1, 1000)\n",
-    "mean = X_mu(nk)\n",
-    "covinv = X_Sigmainv(nk)\n",
-    "theta = minimise_bayes(L, full, mean, covinv, [1, 10, 0.1]).x"
+    "# # nk, L = data_at_iteration(samples_w_1, 1000)\n",
+    "# mean = X_mu(nk)\n",
+    "# covinv = X_Sigmainv(nk)\n",
+    "# theta = minimise_bayes(L, full, mean, covinv, [1, 10, 0.1]).x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X: [ 3.76091801 10.51444231  0.09734205]\n",
-      "logX: [ 6.26553063 11.11905693  0.09511069]\n",
-      "bayes factor: 7.106100115430009\n"
+      "X: [ 0.98336328 10.78177846  0.10000351]\n",
+      "logX: [ 0.12138    10.69683441  0.1008769 ]\n",
+      "bayes factor: 1.7396874238412947\n"
      ]
     }
    ],
@@ -182,13 +182,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1592191/333922539.py:1: RuntimeWarning: overflow encountered in exp\n",
+      "  ratio = np.exp(logZ(y, full, mean_X, covinv_X, theta_X, H_X) - logZ(y, full, mean_X, covinv_X, [2, 12, 0.8], H_X))\n"
+     ]
+    }
+   ],
+   "source": [
+    "ratio = np.exp(logZ(y, full, mean_X, covinv_X, theta_X, H_X) - logZ(y, full, mean_X, covinv_X, [2, 12, 0.8], H_X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b5e7754a2f540dba157dcd4e24b8404",
+       "model_id": "6548ad9276b24d19be01f26df8cf45e8",
        "version_major": 2,
        "version_minor": 0
       },
