refactoring models as classes for ease of use

--- a/notebooks/week_7/1d_ls_evidence.ipynb
+++ b/notebooks/week_7/1d_ls_evidence.ipynb
@@ -25,7 +25,6 @@
     "from aeons.likelihoods import likelihood, linear_like, quad_like, log_like, simple_like, middle_like, full_like\n",
     "linear, quad, log = linear_like(), quad_like(), log_like()\n",
     "simple, middle, full = simple_like(), middle_like(), full_like()\n",
-    "simple_log, middle_log, full_log = simple_like(logX=True), middle_like(logX=True), full_like(logX=True)\n",
     "from aeons.hessian import hess_autograd"
    ]
   },
@@ -135,31 +134,52 @@
     "mean_X = X_mu(nk)\n",
     "covinv_X = X_Sigmainv(nk)\n",
     "eigvals_b = np.linalg.eigvals(covinv_X)\n",
-    "prefactor_b = 1/2 * np.log(eigvals_b).sum()\n",
+    "prefactor_b = 1/2 * np.linalg.slogdet(covinv_X)[1]\n",
+    "\n",
     "\n",
     "theta_true = np.array([10])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3358.3033825404314"
+      ]
+     },
+     "execution_count": 368,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefactor_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1554.949182270367 -11.989975184990945\n",
-      "3777.6212725036735 -0.9352334997423497\n"
+      "1786.9533573486178 -12.995740377988255\n",
+      "3725.201318554363 -1.0616723220252509\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(array([10.79488354]), array([11.17913818]))"
+       "(array([9.89034744]), array([10.0135498]))"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,6 +552,48 @@
     "plt.plot(X, y, 'x', ms=2)\n",
     "plt.plot(linear.inverse(y, theta_l), y, color='black')\n",
     "plt.plot(linear.inverse(y, theta_b), y, color='orange')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = generate_Xs(nk)\n",
+    "theta_true = [0, 10, 0.1]\n",
+    "y = full.func(X, theta_true)\n",
+    "theta_l = minimise_ls(y, full, mean_X, theta_true).x\n",
+    "theta_b = minimise_bayes(y, full, mean_X, covinv_X, theta_true).x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([50.92762792, 20.98745746,  0.07035969]),\n",
+       " array([12.46799851, 13.06154677,  0.08949471]))"
+      ]
+     },
+     "execution_count": 372,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theta_l, theta_b"
    ]
   },
   {
