--- a/notebooks/week_7/least_squares_evidence.ipynb
+++ b/notebooks/week_7/least_squares_evidence.ipynb
@@ -302,7 +302,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "logPmax_b = logPr_bayes_"
+   ]
   }
  ],
  "metadata": {
